--- a/data/cards/08267140.yaml
+++ b/data/cards/08267140.yaml
@@ -197,6 +197,16 @@ sets:
     set_name: 'Speed Duel: Streets of Battle City'
     rarities:
     - Common
+  - set_number: RA02-FR061
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: TDIL-IT065
     set_name: The Dark Illusion
