--- a/data/cards/27243130.yaml
+++ b/data/cards/27243130.yaml
@@ -162,6 +162,16 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: RA02-FR058
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: STOR-IT061
     set_name: Storm of Ragnarok
