--- a/data/cards/40605147.yaml
+++ b/data/cards/40605147.yaml
@@ -172,7 +172,7 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR079
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
