--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -80,7 +80,7 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR071
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
