--- a/data/cards/82732705.yaml
+++ b/data/cards/82732705.yaml
@@ -192,6 +192,16 @@ sets:
     set_name: Dark Crisis (25th Anniversary Edition)
     rarities:
     - Rare
+  - set_number: RA02-FR077
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DR1-IT211
     set_name: Dark Revelation Volume 1
