--- a/data/cards/98645731.yaml
+++ b/data/cards/98645731.yaml
@@ -223,6 +223,16 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: RA02-FR057
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DREV-IT062
     set_name: Duelist Revolution
