--- a/data/cards/02263869.yaml
+++ b/data/cards/02263869.yaml
@@ -58,6 +58,16 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: RA02-FR070
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: POTE-IT067
     set_name: Power of the Elements
