--- a/data/cards/06498706.yaml
+++ b/data/cards/06498706.yaml
@@ -81,6 +81,16 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Super Rare
+  - set_number: RA02-FR065
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: ETCO-IT071
     set_name: Eternity Code
