--- a/data/cards/19739265.yaml
+++ b/data/cards/19739265.yaml
@@ -81,6 +81,16 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Ultra Rare
+  - set_number: RA02-FR068
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BACH-IT085
     set_name: Battle of Chaos
