--- a/data/cards/29599813.yaml
+++ b/data/cards/29599813.yaml
@@ -101,7 +101,7 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR072
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
