--- a/data/cards/41420027.yaml
+++ b/data/cards/41420027.yaml
@@ -309,7 +309,7 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
-  - set_number: RA02-FR???
+  - set_number: RA02-FR075
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
