--- a/data/cards/43898403.yaml
+++ b/data/cards/43898403.yaml
@@ -163,6 +163,16 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: RA02-FR060
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BOSH-IT067
     set_name: Breakers of Shadow
