--- a/data/cards/65681983.yaml
+++ b/data/cards/65681983.yaml
@@ -69,6 +69,16 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-FR063
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: MP21-IT258
     set_name: 2021 Tin of Ancient Battles
