--- a/data/cards/71832012.yaml
+++ b/data/cards/71832012.yaml
@@ -77,7 +77,7 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
-  - set_number: RA02-FR???
+  - set_number: RA02-FR073
     set_name: 25th Anniversary Rarity Collection II
     rarities:
     - Super Rare
