--- a/data/cards/77913594.yaml
+++ b/data/cards/77913594.yaml
@@ -66,6 +66,16 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Prismatic Secret Rare
+  - set_number: RA02-FR066
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: GRCR-FR021
     set_name: The Grand Creators
