--- a/data/cards/93437091.yaml
+++ b/data/cards/93437091.yaml
@@ -87,6 +87,16 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: RA02-FR062
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: LED3-IT003
     set_name: 'Legendary Duelists: White Dragon Abyss'
