--- a/data/cards/47660516.yaml
+++ b/data/cards/47660516.yaml
@@ -23,11 +23,11 @@ text:
   fr: |-
     Ciblez 1 Monstre Xyz face recto que vous contrôlez ; Invoquez Spécialement 1 monstre "Numéro C" ou "CXyz" du même Type que le monstre que vous contrôlez mais avec 1 Rang de plus depuis votre Extra Deck, en l'utilisant comme le Matériel Xyz. (Cette Invocation Spéciale est traitée comme une Invocation Xyz. Les Matériels Xyz attachés au monstre deviennent aussi des Matériels Xyz du monstre Invoqué.) Puis, si possible, détachez 1 Matériel Xyz d'un monstre contrôlé par votre adversaire et attachez-le au monstre Invoqué comme Matériel Xyz.
   it: |-
-    Scegli come bersaglio 1 Mostro Xyz scoperto che controlli; Evoca Specialmente dal tuo Extra Deck 1 mostro "Numero C" o "CXyz" con lo stesso Tipo di quel mostro che controlli ma di 1 Rango superiore, utilizzandolo come Materiale Xyz. (Questa Evocazione Speciale viene considerata una Evocazione Xyz. I Materiali Xyz attaccati ad esso diventano Materiali Xyz anche sul Mostro Evocato.) Poi, se possibile, stacca 1 Materiale Xyz da un mostro controllato dal tuo avversario e attaccalo al mostro Evocato come Materiale Xyz.
+    Scegli come bersaglio 1 Mostro Xyz scoperto che controlli; Evoca Specialmente dal tuo Extra Deck 1 mostro "Numero C" o "CXyz" con lo stesso Tipo di quel mostro che controlli ma di 1 Rango superiore, utilizzandolo come Materiale Xyz. (Questa Evocazione Speciale viene considerata un'Evocazione Xyz. I Materiali Xyz attaccati ad esso diventano Materiali Xyz anche sul mostro Evocato.) Poi, se possibile, stacca 1 Materiale Xyz da un mostro controllato dal tuo avversario e attaccalo al mostro Evocato come Materiale Xyz.
   pt: |-
     Escolha 1 Monstro Xyz com a face para cima que você controla; Invoque por Invocação-Especial do seu Deck Adicional, 1 "Número C" ou monstro "CXyz" com o mesmo Tipo que esse monstro que você controla, mas de 1 Classe maior, usando-o como Matéria Xyz. (Esta Invocação-Especial é considerada uma Invocação-Xyz. Matérias Xyz associadas ao monstro também se tornam Matérias Xyz no monstro Invocado.) Depois, se possível, desassocie 1 Matéria Xyz de um monstro que seu oponente controla e associe-a ao monstro Invocado como uma Matéria Xyz.
   ja: |-
-    自分フィールド上のエクシーズモンスター１体を選択して発動できる。選択したモンスターと同じ種族でランクが１つ高い「ＣＮｏ．」または「ＣＸ」と名のついたモンスター１体を、選択したモンスターの上に重ねてエクシーズ召喚扱いとしてエクストラデッキから特殊召喚する。その後、相手フィールド上にエクシーズ素材が存在する場合、相手フィールド上のエクシーズ素材１つを、この効果で特殊召喚したエクシーズモンスターの下に重ねてエクシーズ素材とする。
+    ①：自分フィールドのＸモンスター１体を対象として発動できる。その自分のモンスターと同じ種族でランクが１つ高い、「ＣＮｏ．」モンスターか「ＣＸ」モンスター１体を、対象のモンスターの上に重ねてＸ召喚扱いでＥＸデッキから特殊召喚する。相手フィールドにＸ素材が存在する場合、さらにその内の１つをその特殊召喚したモンスターのＸ素材とする。
   ko: |-
     자신 필드 위의 엑시즈 몬스터 1장을 선택하고 발동할 수 있다. 선택한 몬스터와 같은 종족으로 랭크가 1개 높은 "CNo.(카오스 넘버즈)" 또는 "CX(카오스 엑시즈)"라는 이름이 붙은 몬스터 1장을, 선택한 몬스터의 위에 겹쳐 엑시즈 소환으로 취급하여 엑스트라 덱에서 특수 소환한다. 그 후, 상대 필드 위에 엑시즈 소재가 존재할 경우, 상대 필드 위의 엑시즈 소재 1개를, 이 효과로 특수 소환한 엑시즈 몬스터의 아래에 겹쳐 엑시즈 소재로 한다.
   zh-TW: |-
@@ -139,6 +139,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: DP29-JP015
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
+    - Common
   ko:
   - set_number: LTGY-KR060
     set_name: Lord of the Tachyon Galaxy
