--- a/data/cards/08038143.yaml
+++ b/data/cards/08038143.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Se você controlar um monstro "Olhos das Galáxias": ative como um Elo de Corrente 2 ou mais; negue as ativações dos Cards de Magia/Armadilha e dos efeitos de monstro do seu oponente ativados antes deste card nesta Corrente e, se isso acontecer, embaralhe no Deck os cards negados que estiverem no campo. Se você controlar um monstro "Dragão de Táquion de Olhos das Galáxias", você pode ativar este card da sua mão.
   ja: |-
-    自分フィールドに「ギャラクシーアイズ・タキオン・ドラゴン」モンスターが存在する場合、このカードの発動は手札からもできる。①：自分フィールドに「ギャラクシーアイズ」モンスターが存在する場合、チェーン２以降に発動できる。このカードの発動時に積まれていたチェーン上の全ての、相手のモンスターの効果・魔法・罠カードの発動を無効にし、この効果で発動を無効にしたフィールドのモンスター及び魔法・罠カードを全て持ち主のデッキに戻す。
+    自分フィールドに「ギャラクシーアイズ・タキオン・ドラゴン」モンスターが存在する場合、このカードの発動は手札からもできる。①：自分フィールドに「ギャラクシーアイズ」モンスターが存在する場合、チェーン２以降に発動できる。このカードの発動時に積まれていたチェーン上の、全ての相手のモンスターの効果・魔法・罠カードの発動を無効にし、この効果で発動を無効にしたカードがフィールドに存在していた場合、それらを全てデッキに戻す。
   ko: |-
     자신 필드에 "갤럭시아이즈 타키온 드래곤" 몬스터가 존재할 경우, 이 카드는 패에서도 발동할 수 있다. ①: 자신 필드에 "갤럭시아이즈" 몬스터가 존재할 경우, 체인 2 이후에 발동할 수 있다. 이 카드의 발동시에 쌓여있던 체인 위의 모든 상대 몬스터의 효과 / 마법 / 함정 카드의 발동을 무효로 하고, 이 효과로 발동을 무효로 한 필드의 카드를 전부 주인의 덱으로 되돌린다.
   zh-TW: |-
     在我方場上存在「銀河眼時空龍」怪獸的狀況下，也可從手牌發動此卡。①：在我方場上存在「銀河眼」怪獸的狀況下，可在連鎖２以後發動。此卡發動時累積的連鎖上的對方的所有怪獸效果・魔法・陷阱卡的發動全部變為無效，將場上的透過此效果使發動變為無效的所有怪獸及魔法・陷阱卡全部送回持有者的牌組。
   zh-CN: |-
-    自己场上有"银河眼时空龙"怪兽存在的情况下，此卡也可从手牌发动。①：自己场上有"银河眼"怪兽存在的情况下，连锁2以后可以发动。将此卡发动时积累的连锁上的所有对手怪兽的效果・魔法・陷阱卡的发动无效，将以此效果使发动无效的、场上的怪兽及魔法・陷阱卡全部放回持有者的牌组。
+    自己场上有“银河眼时空龙”怪兽存在的情况下，此卡也可从手牌发动。①：自己场上有“银河眼”怪兽存在的情况下，连锁2以后可以发动。将此卡发动时积累的连锁上的所有对手怪兽的效果・魔法・陷阱卡的发动无效，将以此效果使发动无效的、场上的怪兽及魔法・陷阱卡全部放回持有者的牌组。
 card_type: Trap
 property: Counter
 series:
@@ -117,9 +117,10 @@ sets:
     set_name: Tournament Pack 2019 Vol.3
     rarities:
     - Common
-  - set_number: DP29-JP015
+  - set_number: DP29-JP017
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Common
   ko:
   - set_number: EP14-KR052
     set_name: 'Extra Pack: Knights of Order'
