--- a/data/cards/15381421.yaml
+++ b/data/cards/15381421.yaml
@@ -27,13 +27,13 @@ text:
   pt: |-
     Você pode enviar qualquer número de monstros Dragão da sua mão e/ou do campo com a face para cima para o Cemitério; adicione 1 monstro Dragão do seu Deck à sua mão, cujo Nível seja igual à soma dos Níveis originais desses monstros enviados para o Cemitério. Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro Dragão de LUZ ou de TREVAS de Nível 8 no seu Cemitério; adicione-o à sua mão. Você só pode usar cada efeito de "Superestelar Seyfert" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札及び自分フィールドの表側表示モンスターの中から、ドラゴン族モンスターを任意の数だけ墓地へ送って発動できる。墓地へ送ったモンスターの元々のレベルの合計と同じレベルを持つドラゴン族モンスター１体をデッキから手札に加える。②：墓地のこのカードを除外し、自分の墓地の光・闇属性のドラゴン族・レベル８モンスター１体を対象として発動できる。そのモンスターを手札に加える。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・フィールド（表側表示）からドラゴン族モンスターを任意の数だけ墓地へ送って発動できる。墓地へ送ったモンスターの元々のレベルの合計と同じレベルを持つドラゴン族モンスター１体をデッキから手札に加える。②：墓地のこのカードを除外し、自分の墓地の光・闇属性のドラゴン族・レベル８モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패 및 자신 필드의 앞면 표시 몬스터 중에서, 드래곤족 몬스터를 임의의 수만큼 묘지로 보내고 발동할 수 있다. 묘지로 보낸 몬스터의 원래 레벨의 합계와 같은 레벨을 가지는 드래곤족 몬스터 1장을 덱에서 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 빛 / 어둠 속성인 드래곤족 / 레벨 8 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：可從手牌及我方場上的正面表示的怪獸中，將任意數量的龍族怪獸送至墓地發動。從牌組將１隻持有等級與送至墓地的怪獸原本的等級合計相同的龍族怪獸加入手牌。②：可將墓地的此卡除外，將我方墓地的１隻光・闇屬性龍族・等級８怪獸做為對象發動。將該怪獸加入手牌。
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：从手牌及自己场上的表侧表示怪兽中，将任意数量的龙族怪兽送至墓地可以发动。从牌组将1只拥有与送至墓地的怪兽合计原本等级相同等级的龙族怪兽加入手牌。②：将墓地的此卡除外，以自己墓地的1只光・暗属性的龙族・等级8怪兽为对象可以发动。将该怪兽加入手牌。
+    此卡名的①②效果１回合仅可各使用１次。①：从手牌及自己场上的表侧表示怪兽中，将任意数量的龙族怪兽送至墓地可以发动。从牌组将１只拥有与送至墓地的怪兽合计原本等级相同等级的龙族怪兽加入手牌。②：将墓地的此卡除外，以自己墓地的１只光・暗属性的龙族・等级８怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -129,6 +129,7 @@ sets:
   - set_number: DP29-JP008
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Common
   ko:
   - set_number: CHIM-KR014
     set_name: Chaos Impact
