--- a/data/cards/28400508.yaml
+++ b/data/cards/28400508.yaml
@@ -34,7 +34,7 @@ text:
     Seu oponente não pode escolher este card como alvo de efeitos de card. Você pode desassociar 1 matéria deste card; pegue 2 monstros Dragão "Número" com nomes diferentes no seu Deck Adicional e/ou Cemitério, exceto "Número 97: Draglubion", Invoque por Invocação-Especial 1 deles e associe o outro a ele como matéria e, além disso, pelo resto deste turno você não pode Invocar outros monstros por Invocação-Especial ou declarar um ataque, exceto com esse monstro Invocado por Invocação-Especial. Você só pode usar este efeito de "Número 97: Draglubion" uma vez por turno.
   ja: |-
     レベル８モンスター×２
-    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードは相手の効果の対象にならない。②：このカードのＸ素材を１つ取り除いて発動できる。自分のＥＸデッキ・墓地から「Ｎｏ．９７ 龍影神ドラッグラビオン」以外のドラゴン族の「Ｎｏ．」モンスター２種類を選ぶ。その内の１体を特殊召喚し、もう１体をそのモンスターの下に重ねてＸ素材とする。この効果の発動後、ターン終了時まで自分はモンスターを特殊召喚できず、この効果で特殊召喚したモンスターでしか攻撃宣言できない。
+    このカード名の②の効果は１ターンに１度しか使用できない。①：相手はフィールドのこのカードを効果の対象にできない。②：このカードのＸ素材を１つ取り除いて発動できる。自分のＥＸデッキ・墓地から「Ｎｏ．９７ 龍影神ドラッグラビオン」以外のドラゴン族の「Ｎｏ．」モンスター２種類を選ぶ。その内の１体を特殊召喚し、もう１体をそのＸ素材とする。この効果の発動後、ターン終了時まで自分はモンスターを特殊召喚できず、この効果で特殊召喚したモンスターでしか攻撃宣言できない。
   ko: |-
     레벨 8 몬스터 × 2
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 상대 효과의 대상이 되지 않는다. ②: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 자신의 엑스트라 덱 / 묘지에서 "No.97 룡영신 드래글라비온" 이외의 드래곤족 "No." 몬스터 2종류를 고른다. 그 중의 1장을 특수 소환하고, 나머지 1장을 그 몬스터의 아래에 겹쳐 엑시즈 소재로 한다. 이 효과의 발동 후, 턴 종료시까지 자신은 몬스터를 특수 소환할 수 없으며, 이 효과로 특수 소환한 몬스터로밖에 공격 선언할 수 없다.
@@ -43,7 +43,7 @@ text:
     此卡名的②效果，１回合僅限使用１次。①：此卡不會成為對方的效果對象。②：可去除此卡的１個超量素材發動。從我方額外牌組・墓地選擇２種「No.97 龍影神 引力子龍」以外的龍族「No.」怪獸。特殊召喚其中的１隻，將另１隻重疊至該怪獸下方做為超量素材。此效果發動後，在回合結束前我方無法特殊召喚怪獸，僅限以透過此效果特殊召喚的怪獸進行攻擊宣言。
   zh-CN: |-
     等级8怪兽×2
-    此卡名的②效果1回合仅可使用1次。①：此卡不会成为对手效果的对象。②：去除此卡的1个超量素材可以发动。从自己的额外牌组・墓地挑选"编号97 龙影神 引力子龙"以外的2种龙族"编号"怪兽。将其中1只特殊召唤，另1只重叠在该怪兽下面作为超量素材。此效果发动后，直至回合结束时为止自己不可特殊召唤怪兽。仅可用以此效果特殊召唤的怪兽攻击宣言。
+    此卡名的②效果1回合仅可使用1次。①：此卡不会成为对手效果的对象。②：去除此卡的1个超量素材可以发动。从自己的额外牌组・墓地挑选“编号97 龙影神 引力子龙”以外的2种龙族“编号”怪兽。将其中1只特殊召唤，另1只重叠在该怪兽下面作为超量素材。此效果发动后，直至回合结束时为止自己不可特殊召唤怪兽。仅可用以此效果特殊召唤的怪兽攻击宣言。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: DARK
@@ -113,6 +113,10 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DP29-JP013
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
+    - Common
   ko:
   - set_number: CP19-KR033
     set_name: 'Collection Pack: Duelist of Revolution Version'
