--- a/data/cards/30012506.yaml
+++ b/data/cards/30012506.yaml
@@ -8,7 +8,7 @@ name:
   it: A-Nucleo d'Assalto
   pt: Núcleo de Assalto A
   ja: <ruby>Ａ<rt>エー</rt></ruby>－アサルト・コア
-  ja_romaji: Ē-Asaruto Koa
+  ja_romaji: Ē - Asaruto Koa
   ko: A－어썰트 코어
   ko_rr: A - Eosseolteu Ko-eo
   zh-TW: A－突擊機核
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno, você pode: escolher 1 monstro Máquina de LUZ que você controla; equipe este card no alvo, OU: desequipe este card e Invoque-o por Invocação-Especial. Um monstro equipado com este card não é afetado pelos efeitos de monstro do seu oponente (exceto seu próprio) e, além disso, se o monstro equipado seria destruído em batalha ou por um efeito de card, em vez disso, destrua este card. Se este card for enviado do campo para o Cemitério: você pode adicionar 1 outro monstro União do seu Cemitério à sua mão.
   ja: |-
-    ①：１ターンに１度、以下の効果から１つを選択して発動できる。●自分フィールドの機械族・光属性モンスター１体を対象とし、このカードを装備カード扱いとしてそのモンスターに装備する。装備モンスターが戦闘・効果で破壊される場合、代わりにこのカードを破壊する。●装備されているこのカードを特殊召喚する。②：装備モンスターは他の相手モンスターの効果を受けない。③：このカードがフィールドから墓地へ送られた場合に発動できる。このカード以外の自分の墓地のユニオンモンスター１体を選んで手札に加える。
+    ①：１ターンに１度、以下の効果を１つ発動できる。●自分フィールドの機械族・光属性モンスター１体を対象とし、このカードを装備魔法カード扱いで装備する。装備モンスターが戦闘・効果で破壊される場合、代わりにこのカードを破壊する。●装備状態のこのカードを特殊召喚する。②：装備モンスターは他の相手モンスターの効果を受けない。③：このカードがフィールドから墓地へ送られた場合に発動できる。自分の墓地の他のユニオンモンスター１体を手札に加える。
   ko: |-
     ①: 1턴에 1번, 이하의 효과에서 1개를 선택하고 발동할 수 있다.
     ●자신 필드의 기계족 / 빛 속성 몬스터 1장을 대상으로 하고, 이 카드를 장착 카드로 취급하여 그 몬스터에 장착한다. 장착 몬스터가 전투 / 효과로 파괴될 경우, 대신에 이 카드를 파괴한다.
@@ -103,6 +103,10 @@ sets:
     - Super Rare
   - set_number: LVP3-JP013
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  - set_number: DP29-JP029
+    set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
     - Common
   ko:
