--- a/data/cards/62651957.yaml
+++ b/data/cards/62651957.yaml
@@ -224,6 +224,10 @@ sets:
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
     - Ultra Rare
+  - set_number: DP29-JP026
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
+    - Common
   ko:
   - set_number: MFC-KR004
     set_name: Magician's Force
