--- a/data/cards/68396121.yaml
+++ b/data/cards/68396121.yaml
@@ -40,7 +40,7 @@ text:
     ● Você pode oferecer 2 monstros como Tributo; este card pode realizar até 3 ataques contra monstros durante cada Fase de Batalha neste turno.
   ja: |-
     レベル９モンスター×３
-    ①：１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。このターン相手はフィールドで発動する効果を発動できず、このカード以外のフィールドの全ての表側表示のカードの効果はターン終了時まで無効化される。②：このカードが「Ｎｏ．１０７ 銀河眼の時空竜」をＸ素材としている場合、以下の効果を得る。●このカード以外の自分フィールドのモンスター２体をリリースして発動できる。このターン、このカードは１度のバトルフェイズ中に３回までモンスターに攻撃できる。
+    ①：１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。このターン相手はフィールドで発動する効果を発動できず、このカード以外のフィールドの全ての表側表示カードの効果はターン終了時まで無効化される。②：このカードが「Ｎｏ．１０７ 銀河眼の時空竜」をＸ素材としている場合、以下の効果を得る。●自分フィールドの他のモンスター２体をリリースして発動できる。このターン、このカードは１度のバトルフェイズ中に３回までモンスターに攻撃できる。
   ko: |-
     레벨 9 몬스터 × 3
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 턴에 상대는 필드에서 발동하는 효과를 발동할 수 없으며, 이 카드 이외의 필드의 모든 앞면 표시의 카드 효과는 턴 종료시까지 무효화된다. ②: 이 카드가 "No.107 갤럭시아이즈 타키온 드래곤"을 엑시즈 소재로 하고 있을 경우, 이하의 효과를 얻는다.
@@ -51,7 +51,7 @@ text:
     ●可解放我方場上的２隻此卡以外的怪獸發動。此回合，此卡在１次戰鬥階段中最多可攻擊怪獸３次。
   zh-CN: |-
     等级9怪兽×3
-    ①：1回合1次，去除此卡的1个超量素材可以发动。此回合，对手不可发动在场上发动的效果，场上此卡以外所有的表侧表示的卡的效果直至回合结束时为止无效化。②：此卡以"编号107 银河眼时空龙"作为超量素材的情况下，获得以下效果。●解放自己场上此卡以外的2只怪兽可以发动。此回合，此卡在1次战斗阶段中，最多可攻击怪兽3次。
+    ①：1回合1次，去除此卡的1个超量素材可以发动。此回合，对手不可发动在场上发动的效果，场上此卡以外所有的表侧表示的卡的效果直至回合结束时为止无效化。②：此卡以“编号107 银河眼时空龙”作为超量素材的情况下，获得以下效果。●解放自己场上此卡以外的2只怪兽可以发动。此回合，此卡在1次战斗阶段中，最多可攻击怪兽3次。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: LIGHT
@@ -164,6 +164,8 @@ sets:
   - set_number: DP29-JP012
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Common
+    - Quarter Century Secret Rare
   ko:
   - set_number: PRIO-KR041
     set_name: Primal Origin
