--- a/data/cards/88177324.yaml
+++ b/data/cards/88177324.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por Fase de Batalha, no começo da sua Fase de Batalha: você pode desassociar 1 matéria deste card; negue os efeitos de todos os outros monstros com a face para cima atualmente no campo e, além disso, seu ATK/DEF se tornam seu ATK/DEF originais. Durante a Fase de Batalha, se você ativou este efeito neste turno, sempre que um efeito de card do oponente resolver, este card ganha 1000 de ATK até o final da Fase de Batalha e, além disso, ele pode realizar um segundo ataque durante cada Fase de Batalha neste turno.
   ja: |-
     レベル８モンスター×２
-    ①：自分バトルフェイズ開始時に、このカードのＸ素材を１つ取り除いて発動できる。このカード以外のフィールドの全ての表側表示モンスターの効果は無効化され、その攻撃力・守備力は元々の数値になる。この効果を発動したターンのバトルフェイズ中に相手が魔法・罠・モンスターの効果を発動する度に、このカードの攻撃力はバトルフェイズ終了時まで１０００アップし、このターン、このカードは１度のバトルフェイズ中に２回攻撃できる。
+    ①：自分バトルフェイズ開始時、このカードのＸ素材を１つ取り除いて発動できる。このカード以外のフィールドの全ての表側表示モンスターの効果は無効化され、その攻撃力・守備力は元々の数値になる。この効果を発動したターンのバトルフェイズ中に相手が魔法・罠・モンスターの効果を発動する度に、このカードの攻撃力はバトルフェイズ終了時まで１０００アップし、このターン、このカードは１度のバトルフェイズ中に２回攻撃できる。
   ko: |-
     레벨 8 몬스터 × 2
     자신의 배틀 페이즈 개시시에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 카드 이외의 필드 위에 앞면 표시로 존재하는 모든 몬스터의 효과는 무효화되며, 그 공격력 / 수비력은 원래의 수치가 된다. 이 효과를 적용한 턴의 배틀 페이즈 중에 상대 카드의 효과가 발동할 때마다, 이 카드의 공격력은 배틀 페이즈 종료시까지 1000 포인트 올리고, 이 턴에 이 카드는 1번의 배틀 페이즈 중에 2회 공격할 수 있다.
@@ -42,8 +42,8 @@ text:
     等级8怪兽×2
     我方战斗阶段开始时，可移除此卡的1个超量素材并发动1次。除此卡以外的场上以表侧表示存在的全部怪兽的效果被无效化，该攻击力、守备力变为各原本数值。该效果适用回合的战斗阶段中，每次对手的卡牌发动效果，此卡的攻击力直至战斗阶段结束时上升1000点，且此卡于此回合可在1次战斗阶段中攻击2次。
   zh-CN: |-
-    等级８怪兽×２
-    ①：自己的战斗阶段开始时，去除此卡的１个超量素材可以发动。场上此卡以外的所有表侧表示怪兽的效果无效化，其攻击力・守备力变为原本的数值。发动了此效果的回合的战斗阶段中，每当对手发动魔法・陷阱・怪兽的效果，此卡的攻击力直至战斗阶段结束时为止就上升１０００，此回合，此卡在１次战斗阶段中可攻击２次。
+    等级8怪兽×2
+    ①：自己的战斗阶段开始时，去除此卡的1个超量素材可以发动。将场上此卡以外的所有表侧表示怪兽的效果无效化，其攻击力・守备力变为原本的数值。发动此效果的回合的战斗阶段中，对手每次发动魔法・陷阱・怪兽的效果，此卡的攻击力直至战斗阶段结束时为止上升1000，此回合，此卡在1次战斗阶段中可攻击2次。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: LIGHT
@@ -65,7 +65,7 @@ images:
   image: Number107GalaxyEyesTachyonDragon-BLC1-EN-C-1E.png
   illustration: Number107GalaxyEyesTachyonDragon-MADU-EN-VG-artwork.png
 - index: 2
-  image: Number107GalaxyEyesTachyonDragon-DP29-JP-OP.png
+  image: Number107GalaxyEyesTachyonDragon-DP29-JP-QCScR.png
   illustration: Number107GalaxyEyesTachyonDragon-OW-2.png
 sets:
   en:
@@ -221,6 +221,7 @@ sets:
   - set_number: DP29-JP011
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
+    - Common
     - Quarter Century Secret Rare
   ko:
   - set_number: LTGY-KR044
